# THE-PROJECT-OFFIX

./: LICENSE  README.md
ROS/offix_description/: CMakeLists.txt  package.xml
ROS/offix_description/gazebo/: office.world  offix_materials.gazebo  offix_physics.gazebo  offix_plugins.gazebo
ROS/offix_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
ROS/offix_description/meshes/: base_link.stl  cback_1.stl  cfront_1.stl  lidar_1.stl  lwheel_1.stl  rwheel_1.stl
ROS/offix_description/urdf/: materials.xacro  offix.trans  offix.xacro
ROS/offix_navigation/: CMakeLists.txt  package.xml
ROS/offix_navigation/launch/: amcl.launch  move_base.launch  offix_navigation.launch
